--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "stripe": "^20.1.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
