--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "stripe": "^20.1.0",
+    "svix": "^1.84.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
